--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 <a href="html/azeitona.html">
                 <img class="img-gato" src="img/azeitonacard.jpg" height="250" width="250">
                 <h1 id="h1Right"> AZEITONA </h1>
-                <h3 id="h3Right"> Eu sou a Azeitona, por causa de meus olhos... Adoro papinha de sache, caçar e participar das reuniões de família. Não gosto de colo e nem de contato físico, muito menos de quando o Billy me segue, sou brava e vivo reclamando. GRRRR >:( </h3>
+                <h3 id="h3Right"> Eu sou a Azeitona, por causa dos meus olhos... Adoro papinha de sache, caçar e participar das reuniões em família. Não gosto de colo e nem de contato físico, muito menos de quando o Billy me segue, sou brava e vivo reclamando. GRRRR >:( </h3>
                 </a>
             </div>
         </div>
