--- a/html/azeitona.html
+++ b/html/azeitona.html
@@ -25,24 +25,24 @@
     <!--Conteudo-->
     <div id="contentAzeitona">
         <div>
-            <img src="../img/Azeitona/a1.jpg" alt="gata branca com olhos verde oliva" height="200" width="200">
-            <img src="../img/Azeitona/a2.jpg" alt="gata branca com olhos verde oliva" height="200" width="200">
-            <img src="../img/Azeitona/a3.jpg" alt="gata branca com olhos verde oliva" height="200" width="200">
-            <img src="../img/Azeitona/a4.jpg" alt="gata branca com olhos verde oliva" height="200" width="200">
-            <img src="../img/Azeitona/a5.jpg" alt="gata branca com olhos verde oliva" height="200" width="200">
-            <img src="../img/Azeitona/a6.jpg" alt="gata branca com olhos verde oliva" height="200" width="200">
-            <img src="../img/Azeitona/a7.jpg" alt="gata branca com olhos verde oliva" height="200" width="200">
-            <img src="../img/Azeitona/a8.jpg" alt="gata branca com olhos verde oliva" height="200" width="200">
-            <img src="../img/Azeitona/a9.jpg" alt="gata branca com olhos verde oliva" height="200" width="200">
-            <img src="../img/Azeitona/a10.jpg" alt="gata branca com olhos verde oliva" height="200" width="200">
-            <img src="../img/Azeitona/a11.jpg" alt="gata branca com olhos verde oliva" height="200" width="200">
-            <img src="../img/Azeitona/a12.jpg" alt="gata branca com olhos verde oliva" height="200" width="200">
-            <img src="../img/Azeitona/a13.jpg" alt="gata branca com olhos verde oliva" height="200" width="200">
-            <img src="../img/Azeitona/a14.jpg" alt="gata branca com olhos verde oliva" height="200" width="200">
-            <img src="../img/Azeitona/a15.jpg" alt="gata branca com olhos verde oliva" height="200" width="200">
-            <img src="../img/Azeitona/a16.jpg" alt="gata branca com olhos verde oliva" height="200" width="200">
-            <img src="../img/Azeitona/a17.jpg" alt="gata branca com olhos verde oliva" height="200" width="200">
-            <img src="../img/Azeitona/a18.jpg" alt="gata branca com olhos verde oliva" height="200" width="200">
+            <img src="../img/azeitona/a1.jpg" alt="gata branca com olhos verde oliva" height="200" width="200">
+            <img src="../img/azeitona/a2.jpg" alt="gata branca com olhos verde oliva" height="200" width="200">
+            <img src="../img/azeitona/a3.jpg" alt="gata branca com olhos verde oliva" height="200" width="200">
+            <img src="../img/azeitona/a4.jpg" alt="gata branca com olhos verde oliva" height="200" width="200">
+            <img src="../img/azeitona/a5.jpg" alt="gata branca com olhos verde oliva" height="200" width="200">
+            <img src="../img/azeitona/a6.jpg" alt="gata branca com olhos verde oliva" height="200" width="200">
+            <img src="../img/azeitona/a7.jpg" alt="gata branca com olhos verde oliva" height="200" width="200">
+            <img src="../img/azeitona/a8.jpg" alt="gata branca com olhos verde oliva" height="200" width="200">
+            <img src="../img/azeitona/a9.jpg" alt="gata branca com olhos verde oliva" height="200" width="200">
+            <img src="../img/azeitona/a10.jpg" alt="gata branca com olhos verde oliva" height="200" width="200">
+            <img src="../img/azeitona/a11.jpg" alt="gata branca com olhos verde oliva" height="200" width="200">
+            <img src="../img/azeitona/a12.jpg" alt="gata branca com olhos verde oliva" height="200" width="200">
+            <img src="../img/azeitona/a13.jpg" alt="gata branca com olhos verde oliva" height="200" width="200">
+            <img src="../img/azeitona/a14.jpg" alt="gata branca com olhos verde oliva" height="200" width="200">
+            <img src="../img/azeitona/a15.jpg" alt="gata branca com olhos verde oliva" height="200" width="200">
+            <img src="../img/azeitona/a16.jpg" alt="gata branca com olhos verde oliva" height="200" width="200">
+            <img src="../img/azeitona/a17.jpg" alt="gata branca com olhos verde oliva" height="200" width="200">
+            <img src="../img/azeitona/a18.jpg" alt="gata branca com olhos verde oliva" height="200" width="200">
         </div>
     </div>
 
