correção texto billy

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <div id="cardLeft" style="background-image: url('img/backgroundbilly.png')">
                 <a href="html/billy.html">
                 <img class="img-gato" src="img/billycard.jpg" height="250" width="250">                    <h1 id="h1Left"> BILLY </h1>
-                <h3 id="h3Left"> Oi eu sou o Billy, sou preto com olhos de fogo, gosto muito de comer e dormir, adoro um colo e carinho, sou brincalhão e também bravinho, gosto de morder e arranhar e vivo indo atras da Azeitona. ~Miau :3 </h3>                     
+                <h3 id="h3Left"> Oi eu sou o Billy, sou preto com olhos de fogo, gosto muito de comer e dormir, adoro um colo e carinho, sou brincalhão e também bravinho, gosto de morder, arranhar e vivo indo atras da Azeitona. ~Miau :3 </h3>                     
                 </a>
             </div>   
         </div>
