--- a/html/billy.html
+++ b/html/billy.html
@@ -23,7 +23,7 @@
     </div>
 
     <!--Conteudo-->
-    <div id="contentBilly">
+    <div id="contentBilly" style="background-image: url('../img/backgroundbilly.png')" >
         <div>
             <img src="../img/billy/b1.jpg" alt="gato preto com olhos alaranjados" height="200" width="200">
             <img src="../img/billy/b2.jpg" alt="gato preto com olhos alaranjados" height="200" width="200">
