--- a/index.html
+++ b/index.html
@@ -25,16 +25,16 @@
 
     <!--Conteudo-->
     <div class="content">
-        <div id="contentLeft">
-            <div id="cardLeft" style="background-image: url('img/backgroundbilly.png')">
+        <div id="contentLeft" style="background-image: url('img/backgroundbilly.png')">
+            <div id="cardLeft" style="background-image: url('img/billycard.png')">
                 <a href="html/billy.html">
-                <img class="img-gato" src="img/billycard.jpg" height="250" width="250">                    <h1 id="h1Left"> BILLY </h1>
+                <img class="img-gato" src="img/billyicon.jpg" height="250" width="250">                    <h1 id="h1Left"> BILLY </h1>
                 <h3 id="h3Left"> Oi eu sou o Billy, sou preto com olhos de fogo, gosto muito de comer e dormir, adoro um colo e carinho, sou brincalhão e também bravinho, gosto de morder, arranhar e vivo indo atras da Azeitona. ~Miau :3 </h3>                     
                 </a>
             </div>   
         </div>
 
-        <div id="contentRight">
+        <div id="contentRight"  style="background-image: url('img/backgroundazeitona.png')">
             <div id="cardRight" style="background-image: url('img/backgroundazeitona.png')">
                 <a href="html/azeitona.html">
                 <img class="img-gato" src="img/azeitonacard.jpg" height="250" width="250">
