--- a/html/azeitona.html
+++ b/html/azeitona.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title> Billy </title>
+        <title>Azeitona</title>
         <link rel="stylesheet" href="../css/css.css">
     </head>
 
