--- a/html/billy.html
+++ b/html/billy.html
@@ -13,12 +13,14 @@
             </a>
         </div>
         <div class="header-right">
-            <ul>
-                <a href="https://www.instagram.com/marcospsm1/" target="_blank"><li><img src="../img/instagram.png" title="instagram" alt="instagram" height="30" width="30"></li></a>
-                <a href="https://twitter.com/salty1_" target="_blank"><li><img src="../img/twitter.png" title="twitter" alt="twitter" height="30" width="30"></li></a>
-                <li><img src="../img/mail.png" title="marcospaulosm2000@gmail.com" alt="email" height="30" width="30"></li></a>
-                <a href="https://github.com/marcospsm/" target="_blank"><li><img src="../img/github.png" title="github" alt="github" height="30" width="30"></li></a>
-            </ul>
+            <div class="icons">
+                <ul>
+                    <a href="https://www.instagram.com/marcospsm1/" target="_blank"><li><img src="../img/instagram.png" title="instagram" alt="instagram" height="30" width="30"></li></a>
+                    <a href="https://twitter.com/salty1_" target="_blank"><li><img src="../img/twitter.png" title="twitter" alt="twitter" height="30" width="30"></li></a>
+                    <li><img src="../img/mail.png" title="marcospaulosm2000@gmail.com" alt="email" height="30" width="30"></li></a>
+                    <a href="https://github.com/marcospsm/" target="_blank"><li><img src="../img/github.png" title="github" alt="github" height="30" width="30"></li></a>
+                </ul>
+            </div>
         </div>
     </div>
 
