--- a/index.html
+++ b/index.html
@@ -14,12 +14,14 @@
             </a>
         </div>
         <div class="header-right">
-            <ul>
-                <a href="https://www.instagram.com/marcospsm1/" target="_blank"><li><img src="img/instagram.png" title="instagram" alt="instagram" height="30" width="30"></li></a>
-                <a href="https://twitter.com/salty1_" target="_blank"><li><img src="img/twitter.png" title="twitter" alt="twitter" height="30" width="30"></li></a>
-                <li><img src="img/mail.png" title="marcospaulosm2000@gmail.com" alt="email" height="30" width="30"></li></a>
-                <a href="https://github.com/marcospsm/" target="_blank"><li><img src="img/github.png" title="github" alt="github" height="30" width="30"></li></a>
-            </ul>
+            <div class="icons">
+                <ul>
+                    <a href="https://www.instagram.com/marcospsm1/" target="_blank"><li><img src="img/instagram.png" title="instagram" alt="instagram" height="30" width="30"></li></a>
+                    <a href="https://twitter.com/salty1_" target="_blank"><li><img src="img/twitter.png" title="twitter" alt="twitter" height="30" width="30"></li></a>
+                    <li><img src="img/mail.png" title="marcospaulosm2000@gmail.com" alt="email" height="30" width="30"></li></a>
+                    <a href="https://github.com/marcospsm/" target="_blank"><li><img src="img/github.png" title="github" alt="github" height="30" width="30"></li></a>
+                </ul>
+            </div>
         </div>
     </div>
 
@@ -28,10 +30,13 @@
         <div id="contentLeft" style="background-image: url('img/backgroundbilly.png')">
             <div id="cardLeft" style="background-image: url('img/billycard.png')">
                 <a href="html/billy.html">
-                <img class="img-gato" src="img/billyicon.jpg" height="250" width="250">                    <h1 id="h1Left"> BILLY </h1>
-                <h3 id="h3Left"> Oi eu sou o Billy, sou preto com olhos de fogo, gosto muito de comer e dormir, adoro um colo e carinho, sou brincalhão e também bravinho, gosto de morder, arranhar e vivo indo atras da Azeitona. ~Miau :3 </h3>                     
+                    <img class="img-gato" src="img/billyicon.jpg" height="250" width="250">
+                    <h1 id="h1Left">BILLY</h1>
+                    <h3 id="h3Left"> Oi eu sou o Billy, sou preto com olhos de fogo, gosto muito de comer e dormir, adoro um colo e carinho, sou brincalhão e também bravinho, gosto de morder, arranhar e vivo indo atras da Azeitona. ~Miau :3 </h3>
                 </a>
             </div>   
+
+               
         </div>
 
         <div id="contentRight"  style="background-image: url('img/backgroundazeitona.png')">
@@ -59,6 +64,6 @@
             <li><a href="https://github.com/marcospsm/billy-azeitona/upload" target="_blank"> GitHub </a></li>
         </ul>
     </div>
-
+    
 </body>
 </html>    
