--- a/html/billy.html
+++ b/html/billy.html
@@ -3,6 +3,14 @@
     <head>
         <title> Billy </title>
         <link rel="stylesheet" href="../css/css.css">
+        <!-- CSS only -->
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+
+        <!-- JS, Popper.js, and jQuery -->
+        <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
+        <meta name="viewport" content="width=device-width">
     </head>
 
     <!--Cabeçalho-->
@@ -25,7 +33,7 @@
     </div>
 
     <!--Conteudo-->
-    <div id="contentBilly" style="background-image: url('../img/backgroundbilly.png')" >
+    <div id="contentBilly">
         <div>
             <img src="../img/billy/b1.jpg" alt="gato preto com olhos alaranjados" height="200" width="200">
             <img src="../img/billy/b2.jpg" alt="gato preto com olhos alaranjados" height="200" width="200">
