--- a/html/azeitona.html
+++ b/html/azeitona.html
@@ -33,7 +33,7 @@
     </div>
 
     <!--Conteudo-->
-    <div id="contentAzeitona">
+    <div class="content-azeitona">
         <div>
             <img src="../img/azeitona/a1.jpg" alt="gata branca com olhos verde oliva" height="200" width="200">
             <img src="../img/azeitona/a2.jpg" alt="gata branca com olhos verde oliva" height="200" width="200">
@@ -56,15 +56,22 @@
         </div>
     </div>
 
-     <!--Rodapé-->
-     <div class="footer">
-        <ul id="ul1">
-            <li><a href="../index.html"> Home </a></li>
-            <li><a href="billy.html"> Billy </a></li>
-            <li><a href="azeitona.html"> Azeitona </a></li>
+    <!--Rodapé-->
+    <div class="footer container">
+        <ul class="ul-mobile">
+            <a href="https://www.instagram.com/marcospsm1/" target="_blank"><li><img src="../img/instagram.png" title="instagram" alt="instagram" height="30" width="30"></li></a>
+            <a href="https://twitter.com/salty1_" target="_blank"><li><img src="../img/twitter.png" title="twitter" alt="twitter" height="30" width="30"></li></a>
+            <li><img src="../img/mail.png" title="marcospaulosm2000@gmail.com" alt="email" height="30" width="30"></li></a>
+            <a href="https://github.com/marcospsm/" target="_blank"><li><img src="../img/github.png" title="github" alt="github" height="30" width="30"></li></a>
         </ul>
 
-        <ul id="ul2">
+        <ul class="ul1">
+            <li><a href="index.html"> Home </a></li>
+            <li><a href="html/billy.html"> Billy </a></li>
+            <li><a href="html/azeitona.html"> Azeitona </a></li>
+        </ul>
+
+        <ul class="ul2">
             <li><a href="https://www.instagram.com/marcospsm1/" target="_blank"> Instagram </a></li>
             <li><a href="https://twitter.com/salty1_" target="_blank"> Twitter </a></li>
             <li><a href="https://github.com/marcospsm/billy-azeitona/upload" target="_blank"> GitHub </a></li>
