--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <div class="carrosel-mobile" style="background-image: url('img/billycard.png')">
+            <div class="carrosel-mobile" style="background-image: url('img/backgroundbilly.png')">
                 <a id="iconMobile" href="html/billy.html">
                 <img class="img-gato" src="img/billyicon.jpg" height="250" width="250">
                 </a>
@@ -98,13 +98,13 @@
             <a href="https://github.com/marcospsm/" target="_blank"><li><img src="img/github.png" title="github" alt="github" height="30" width="30"></li></a>
         </ul>
 
-        <ul id="ul1">
+        <ul class="ul1">
             <li><a href="index.html"> Home </a></li>
             <li><a href="html/billy.html"> Billy </a></li>
             <li><a href="html/azeitona.html"> Azeitona </a></li>
         </ul>
 
-        <ul id="ul2">
+        <ul class="ul2">
             <li><a href="https://www.instagram.com/marcospsm1/" target="_blank"> Instagram </a></li>
             <li><a href="https://twitter.com/salty1_" target="_blank"> Twitter </a></li>
             <li><a href="https://github.com/marcospsm/billy-azeitona/upload" target="_blank"> GitHub </a></li>
