--- a/html/fotosAzeitona.html
+++ b/html/fotosAzeitona.html
@@ -1,11 +1,8 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
-<head>
-    <link rel="stylesheet" href="../css/css.css">
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Billy</title>
-
+<html>
+    <head>
+        <title> Azeitona </title>
+        <link rel="stylesheet" href="../css/css.css">
         <!-- CSS only -->
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 
@@ -13,9 +10,9 @@
         <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
-        
-</head>
-<body>
+        <meta name="viewport" content="width=device-width">
+    </head>
+
     <!--Cabeçalho-->
     <div class="header">
         <div class="header-left">
@@ -35,18 +32,30 @@
         </div>
     </div>
 
-
     <!--Conteudo-->
-    <div class="content-billy">
-        <div id="divBilly">
-            <img class="img-gato" id="imgGatoBilly" src="../img/billyicon.jpg" alt="gato preto" height="250" width="250">
-            <h3 class="h3-left" id="h3Billy">O Billy foi encontrado na igreja central de nossa cidade, no dia nossa família estava passando pela praça e no gramado estava o Billy relaxando, então ele olhou para nós e seus olhos nos encantaram. Como ele era um filhote, veio pedir carinho todo feliz e então decidimos leva-lo para casa.</h3>
-            <img id="fotoIgreja" src="../img/igreja.jpg" alt="igreja" height="969" width="642">
+    <div class="content-azeitona">
+        <div class="botao-azeitona"><a href="../html/azeitona.html">Voltar</a></div>
+        <div>
+            <img class="foto" src="../img/azeitona/a1.jpg" alt="gata branca com olhos verde oliva" height="200" width="200">
+            <img class="foto" src="../img/azeitona/a2.jpg" alt="gata branca com olhos verde oliva" height="200" width="200">
+            <img class="foto" src="../img/azeitona/a3.jpg" alt="gata branca com olhos verde oliva" height="200" width="200">
+            <img class="foto" src="../img/azeitona/a4.jpg" alt="gata branca com olhos verde oliva" height="200" width="200">
+            <img class="foto" src="../img/azeitona/a5.jpg" alt="gata branca com olhos verde oliva" height="200" width="200">
+            <img class="foto" src="../img/azeitona/a6.jpg" alt="gata branca com olhos verde oliva" height="200" width="200">
+            <img class="foto" src="../img/azeitona/a7.jpg" alt="gata branca com olhos verde oliva" height="200" width="200">
+            <img class="foto" src="../img/azeitona/a8.jpg" alt="gata branca com olhos verde oliva" height="200" width="200">
+            <img class="foto" src="../img/azeitona/a9.jpg" alt="gata branca com olhos verde oliva" height="200" width="200">
+            <img class="foto" src="../img/azeitona/a10.jpg" alt="gata branca com olhos verde oliva" height="200" width="200">
+            <img class="foto" src="../img/azeitona/a11.jpg" alt="gata branca com olhos verde oliva" height="200" width="200">
+            <img class="foto" src="../img/azeitona/a12.jpg" alt="gata branca com olhos verde oliva" height="200" width="200">
+            <img class="foto" src="../img/azeitona/a13.jpg" alt="gata branca com olhos verde oliva" height="200" width="200">
+            <img class="foto" src="../img/azeitona/a14.jpg" alt="gata branca com olhos verde oliva" height="200" width="200">
+            <img class="foto" src="../img/azeitona/a15.jpg" alt="gata branca com olhos verde oliva" height="200" width="200">
+            <img class="foto" src="../img/azeitona/a16.jpg" alt="gata branca com olhos verde oliva" height="200" width="200">
+            <img class="foto" src="../img/azeitona/a17.jpg" alt="gata branca com olhos verde oliva" height="200" width="200">
+            <img class="foto" src="../img/azeitona/a18.jpg" alt="gata branca com olhos verde oliva" height="200" width="200">
         </div>
-        <div class="botao-billy"><a href="../html/fotosBilly.html">FOTOS</a></div>
     </div>
-
-
 
     <!--Rodapé-->
     <div class="footer container">
@@ -70,5 +79,4 @@
         </ul>
     </div>
 
-</body>
-</html>
+</html>   
