--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <div id="cardLeft">
                 <a href="html/billy.html">
                     <img class="img-gato" src="img/billyicon.jpg" height="250" width="250">
-                    <h1 id="h1Left">BILLY</h1>
+                    <h1 class="h1-left">BILLY</h1>
                     <h3 class="h3-left"> Oi eu sou o Billy, sou preto com olhos de fogo, gosto muito de comer e dormir, adoro um colo e carinho, sou brincalhão e também bravinho, gosto de morder, arranhar e vivo indo atras da Azeitona. ~Miau :3 </h3>
                 </a>
             </div>   
@@ -53,7 +53,7 @@
             <div id="cardRight">
                 <a href="html/azeitona.html">
                 <img class="img-gato" src="img/azeitonaicon.jpg" height="250" width="250">
-                <h1 id="h1Right"> AZEITONA </h1>
+                <h1 class="h1-right"> AZEITONA </h1>
                 <h3 class="h3-right"> Eu sou a Azeitona, por causa dos meus olhos... Adoro papinha de sache, caçar e participar das reuniões em família. Não gosto de colo e nem de contato físico, muito menos de quando o Billy me segue, sou brava e vivo reclamando. GRRRR >:( </h3>
                 </a>
             </div>
