--- a/html/fotosBilly.html
+++ b/html/fotosBilly.html
@@ -67,9 +67,9 @@
         </ul>
 
         <ul class="ul1">
-            <li><a href="index.html"> Home </a></li>
-            <li><a href="html/billy.html"> Billy </a></li>
-            <li><a href="html/azeitona.html"> Azeitona </a></li>
+            <li><a href="../index.html"> Home </a></li>
+            <li><a href="../html/billy.html"> Billy </a></li>
+            <li><a href="../html/azeitona.html"> Azeitona </a></li>
         </ul>
 
         <ul class="ul2">
